# Dna-Transformer

./: .gitignore  cli.py  predict.py  pyproject.toml  test.ipynb  test.py  test_data.ipynb  train.py  train_tokenizer.py
adn/: data.py  hapmap_to_spn_parquet.py  plots.py  prediction.py  prediction_results.py  tokenizer.py
adn/cli/: hapmap_to_parquet.py  hapmap_to_snp.py  hapmap_to_snp_per_individual.py  hapmap_to_spn_parquet.py
adn/data/: data.py  data_collator.py
adn/data/datasets/: RandomFixedLenDNADataset.py  SequentialFixedLenDNADataset.py  base.py
adn/models/: activation_shaping.py  bert.py  tokenizer.py
adn/models/autoencoder/: autoencoder.py  blocks.py
adn/models/base_models/: base.py  bert.py  modern_bert.py  unused.py
adn/utils/: paths_utils.py
