[project]
name = "adn"
version = "0.1.0"
description = ""
authors = [
    {name = "Pierre Carceller Meunier",email = "pierre.carcellermeunier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyarrow (>=19.0.0,<20.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "polars (>=1.21.0,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "transformers[torch] (>=4.49.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "plotly (>=5.5.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
torchaudio = {source = "pytorch"}
