[project]
name = "dna-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "typer>=0.15.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers[torch]>=4.51.3",
    "datasets>=3.5.1",
    "evaluate>=0.4.3",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
